Fixed design of scrollbar track. Added images. Pending calendar, todo list  & layout fixes.

--- a/public/styles.css
+++ b/public/styles.css
@@ -73,4 +73,19 @@
     width:30%;
     background-color: rgba(152, 156, 109, 0.288);
 }
+
+::-webkit-scrollbar{
+    background-color:transparent;
+    width:4px;
+}
+::-webkit-scrollbar-track{
+    background-color:transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color:#92908a;
+    border-radius:16px;
+    border: 4px solid transparent
+}
+
+
 /*Styling content inside the flex items*/
